# DesktopTerminal-2025

./: .gitignore  CLAUDE.md  LICENSE_ANSI.txt  README.md  convert_icon.sh  installer.nsi
.cursor/rules/: dt.mdc
.github/workflows/: build-kylin-arm.yml  build-kylin-x86.yml  build-windows.yml  main.yml
docs/: config-guide.md  git-setup-checklist.md  github-actions-usage.md  macos-to-windows-build.md  ultimate-fallback-plan.md  windows-packaging-guide.md  windows7-compatibility-test-plan.md
qt-shell/: CMakeLists.txt  README.md  main.cpp
resources/: config.json
rules/: dt.mdc
scripts/: README-Windows-Build.md  README.md  check-deps.bat  clean-build.bat  debug-test.bat  deploy-windows.bat  fallback-level1.bat  fallback-level2.bat  fallback-level3.bat  fix-qhotkey-submodule.sh  init-git-repo.sh  package-windows.bat  run-windows7-compat.bat
zdf-exam-desktop/: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
